tests/snapshots/sfc/js/patches__callback_with_typed_parameters.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue";
export default {
  __name: "test",
  setup(__props) {
    const items = [];
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        null,
        "\n    " + _toDisplayString(items.map((item) => item.name).join(", ")) + "\n  ",
        1
        /* TEXT */
);
    };
  }
};
