tests/snapshots/sfc/js/patches__duplicate_named_imports_should_be_filtered.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"

import { cloneDeep } from 'lodash-es'
import { cloneDeep } from 'lodash-es'
import { merge } from 'lodash-es'

export default {
  __name: 'test',
  setup(__props) {

const data = cloneDeep({ value: 1 })

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(data).value), 1 /* TEXT */))
}
}

}
