tests/snapshots/sfc/js/patches__props_destructure_with_type_based_defineprops_and_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, normalizeClass as _normalizeClass } from "vue";
export default {
  __name: "test",
  props: {
    color: {
      type: String,
      required: false,
      default: "primary"
    },
    size: {
      type: String,
      required: false,
      default: "medium"
    }
  },
  setup(__props) {
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        { class: _normalizeClass([__props.color, __props.size]) },
        "Styled",
        2
        /* CLASS */
);
    };
  }
};
