tests/snapshots/sfc/js/patches__ref_with_generic_type_should_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, toDisplayString as _toDisplayString } from "vue";
import { ref } from "vue";
export default {
  __name: "test",
  setup(__props) {
    const user = ref(null);
    const users = ref([]);
    return (_ctx, _cache) => {
      return user.value ? (_openBlock(), _createElementBlock(
        "div",
        { key: 0 },
        _toDisplayString(user.value.name),
        1
        /* TEXT */
)) : _createCommentVNode("v-if", true);
    };
  }
};
