tests/snapshots/sfc/js/patches__type_keyword_in_conditional.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, toDisplayString as _toDisplayString } from "vue";
export default {
  __name: "test",
  props: { item: {
    type: null,
    required: true
  } },
  setup(__props) {
    const props = __props;
    return (_ctx, _cache) => {
      return __props.item.type === "special" ? (_openBlock(), _createElementBlock(
        "div",
        { key: 0 },
        _toDisplayString(__props.item.value),
        1
        /* TEXT */
)) : _createCommentVNode("v-if", true);
    };
  }
};
